# uascript

./: CMakeLists.txt  LICENSE  README.md  inspect.lua  lua-open62541.c  lua-open62541.h  lua-open62541_builtin.c  lua-open62541_generic.c  lua-open62541_server.c  lua-open62541_types.c  open62541.c  open62541.h  readme.md  test.lua
doc/: Makefile  make.bat
doc/source/: client.rst  conf.py  index.rst  internals.rst  intro.rst  server.rst  types.rst
examples/: client.lua  test.lua
src/: compat-5.2.h  libua.c  libua.h  libua_client.c  libua_server.c  libua_types.c  open62541.c  open62541.h  uascript.c  uascript.h  uascript_client.c  uascript_server.c  uascript_types.c
src/lua-5.2.4/src/: lua.c  lua.c.orig  lua.h
